--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.11.0",
+    "@types/lodash-es": "^4.17.6",
     "typescript": "^4.7.3",
     "wrangler": "^2.0.8"
   },
